--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,10 @@
 set -g mouse on
 
+# bind C-a to be the prefix key
+unbind C-b
+set-option -g prefix C-a
+bind C-a send-prefix
+
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 set -g base-index 1           # start windows numbering at 1
@@ -14,28 +19,12 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'binoymanoj/tmux-minimal-theme'
 
+set -g @continuum-restore 'on'
 
 set -gq allow-passthrough on
-
-# catppuccin theme
-set -g @catppuccin_flavour 'mocha'
-set -g @tokyo-night-tmux_show_datetime 0
-set -g @tokyo-night-tmux_show_path 1
-set -g @tokyo-night-tmux_path_format relative
-set -g @tokyo-night-tmux_window_id_style dsquare
-set -g @tokyo-night-tmux_window_id_style dsquare
-set -g @tokyo-night-tmux_show_git 0
-
-
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux 
-
-
-# Ensure that everything on the right side of the status line
-# is included.
-set -g status-right-length 100
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
